--- a/docs/identity/enterprise-apps/toc.yml
+++ b/docs/identity/enterprise-apps/toc.yml
@@ -1,3 +1,4 @@
+items:
   - name: Application management documentation
     href: index.yml
   - name: Overview
@@ -245,7 +246,7 @@
               - name: SSL-VPN
                 href: f5-passwordless-vpn.md  
               - name: B2C
-                href: /azure/active-directory-b2c/partner-f5?toc=/entra/identity/enterprise-apps/toc.json?bc=/entra/identity/enterprise-apps/breadcrumb/toc.json?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+                href: /azure/active-directory-b2c/partner-f5?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
       - name: Silverfort
         href: silverfort-integration.md
     - name: Single sign-on
@@ -287,11 +288,11 @@
   - name: Reference
     items:
     - name: Application API - Microsoft Graph
-      href: /graph/api/resources/application?toc=/entra/identity/enterprise-apps/toc.json?bc=/entra/identity/enterprise-apps/breadcrumb/toc.json?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+      href: /graph/api/resources/application?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
     - name: Service principals API - Microsoft Graph
-      href: /graph/api/resources/serviceprincipal?toc=/entra/identity/enterprise-apps/toc.json?bc=/entra/identity/enterprise-apps/breadcrumb/toc.json?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+      href: /graph/api/resources/serviceprincipal?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
     - name: Manage apps using Microsoft Graph
-      href: /graph/tutorial-applications-basics?toc=/entra/identity/enterprise-apps/toc.json?bc=/entra/identity/enterprise-apps/breadcrumb/toc.json?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+      href: /graph/tutorial-applications-basics?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
     - name: Deletion and recovery FAQ
       href: delete-recover-faq.yml
     - name: Admin consent workflow FAQ
@@ -311,7 +312,7 @@
         - name: Migration resources
           href: migration-resources.md
         - name: Support and help options for developers
-          href: ~/identity-platform/developer-support-help-options.md?toc=/entra/identity/enterprise-apps/toc.json?bc=/entra/identity/enterprise-apps/breadcrumb/toc.json
+          href: ~/identity-platform/developer-support-help-options.md?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json
         - name: Azure feedback forum
           href: https://feedback.azure.com/d365community/forum/22920db1-ad25-ec11-b6e6-000d3a4f0789
         - name: Microsoft Q&A question page
