--- a/docs/external-id/toc.yml
+++ b/docs/external-id/toc.yml
@@ -72,9 +72,9 @@ items:
   - name: Authentication and Conditional Access
     href: authentication-conditional-access.md
   - name: Azure AD B2C (link to documentation)
-    href: /azure/active-directory-b2c/overview?toc=/entra/external-id/toc.json?bc=/entra/external-id/breadcrumb/toc.json?context=/entra/external-id/context/external-id-context.json
+    href: /azure/active-directory-b2c/overview?toc=/entra/external-id/toc.json&bc=/entra/external-id/breadcrumb/toc.json&context=/entra/external-id/context/external-id-context.json
   - name: Multi-tenant organizations documentation (link to documentation)
-    href: /entra/identity/multi-tenant-organizations/overview?toc=/entra/external-id/toc.json?bc=/entra/external-id/breadcrumb/toc.json
+    href: /entra/identity/multi-tenant-organizations/overview?toc=/entra/external-id/toc.json&bc=/entra/external-id/breadcrumb/toc.json
 - name: How-to guides
   expanded: false
   items:
