--- a/docs/identity/managed-identities-azure-resources/TOC.yml
+++ b/docs/identity/managed-identities-azure-resources/TOC.yml
@@ -39,13 +39,13 @@
     - name: Access Azure Key Vault
       href: tutorial-linux-vm-access-nonaad.md
     - name: Access Azure Container Registry
-      href: /azure/container-registry/container-registry-authentication-managed-identity?toc=/entra/identity/managed-identities-azure-resources/toc.json?bc=/entra/identity/managed-identities-azure-resources/breadcrumb/toc.json?context=/entra/identity/managed-identities-azure-resources/context/msi-context.json
+      href: /azure/container-registry/container-registry-authentication-managed-identity?toc=/entra/identity/managed-identities-azure-resources/toc.json&bc=/entra/identity/managed-identities-azure-resources/breadcrumb/toc.json&context=/entra/identity/managed-identities-azure-resources/context/msi-context.json
     - name: Access Azure Resource Manager with a user-assigned managed identity
       href: msi-tutorial-linux-vm-access-arm.md
   - name: Access Azure Cosmos DB
     href: tutorial-vm-managed-identities-cosmos.md
   - name: Azure Service Bus
-    href: /azure/service-bus-messaging/service-bus-managed-service-identity?toc=/entra/identity/managed-identities-azure-resources/toc.json?bc=/entra/identity/managed-identities-azure-resources/breadcrumb/toc.json?context=/entra/identity/managed-identities-azure-resources/context/msi-context.json
+    href: /azure/service-bus-messaging/service-bus-managed-service-identity?toc=/entra/identity/managed-identities-azure-resources/toc.json&bc=/entra/identity/managed-identities-azure-resources/breadcrumb/toc.json?context=/entra/identity/managed-identities-azure-resources/context/msi-context.json
   - name: Azure App Service and Functions
     href: /azure/app-service/overview-managed-identity?toc=/entra/identity/managed-identities-azure-resources/toc.json?bc=/entra/identity/managed-identities-azure-resources/breadcrumb/toc.json?context=/entra/identity/managed-identities-azure-resources/context/msi-context.json
   - name: Azure Event Hubs
