--- a/docs/identity/role-based-access-control/TOC.yml
+++ b/docs/identity/role-based-access-control/TOC.yml
@@ -7,7 +7,7 @@
 - name: Quickstarts
   items:
   - name: Assign roles to users
-    href: ~/fundamentals/how-subscriptions-associated-directory.md?toc=/entra/identity/role-based-access-control/TOC.yml?bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
+    href: ~/fundamentals/how-subscriptions-associated-directory.md?toc=/entra/identity/role-based-access-control/TOC.yml&bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
 - name: Concepts
   items:
   - name: Understand Microsoft Entra roles
@@ -15,7 +15,7 @@
   - name: Compare roles
     items:
     - name: Compare Azure and Microsoft Entra roles    
-      href: /azure/role-based-access-control/rbac-and-directory-admin-roles?toc=/entra/identity/role-based-access-control/TOC.yml?bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
+      href: /azure/role-based-access-control/rbac-and-directory-admin-roles?toc=/entra/identity/role-based-access-control/TOC.yml&bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
     - name: Microsoft 365 roles
       href: m365-workload-docs.md
   - name: Use groups to manage role assignments
@@ -109,7 +109,7 @@
     - name: Troubleshoot administrative units
       href: admin-units-faq-troubleshoot.yml
     - name: Get support for Microsoft Entra ID
-      href: ~/fundamentals/how-to-get-support.md?toc=/entra/identity/role-based-access-control/TOC.yml?bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
+      href: ~/fundamentals/how-to-get-support.md?toc=/entra/identity/role-based-access-control/TOC.yml&bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
 - name: Reference
   items:
   - name: Built-in roles
@@ -117,7 +117,7 @@
   - name: Least privileged roles by task   
     href: delegate-by-task.md
   - name: Default user permissions    
-    href: ~/fundamentals/users-default-permissions.md?toc=/entra/identity/role-based-access-control/TOC.yml?bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
+    href: ~/fundamentals/users-default-permissions.md?toc=/entra/identity/role-based-access-control/TOC.yml&bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
   - name: Custom role permissions
     items:
     - name: App registration permissions
@@ -133,7 +133,7 @@
     - name: Group management permissions
       href: custom-group-permissions.md
   - name: Microsoft Entra service limits
-    href: ~/identity/users/directory-service-limits-restrictions.md?toc=/entra/identity/role-based-access-control/TOC.yml?bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
+    href: ~/identity/users/directory-service-limits-restrictions.md?toc=/entra/identity/role-based-access-control/TOC.yml&bc=/entra/identity/role-based-access-control/breadcrumb/toc.yml
   - name:  Azure AD PowerShell
     href: /powershell/module/azuread/#directory-roles
   - name: Microsoft Graph API
