Updates to add android client.

--- a/docs/global-secure-access/toc.yml
+++ b/docs/global-secure-access/toc.yml
@@ -23,6 +23,8 @@ items:
     items:
       - name: Install the Windows client
         href: how-to-install-windows-client.md
+      - name: Install the Android client
+        href: how-to-install-android-client.md
   - name: Remote networks
     expanded: false
     items:
