--- a/docs/identity/enterprise-apps/toc.yml
+++ b/docs/identity/enterprise-apps/toc.yml
@@ -246,7 +246,7 @@ items:
               - name: SSL-VPN
                 href: f5-passwordless-vpn.md  
               - name: B2C
-                href: /azure/active-directory-b2c/partner-f5?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+                href: /azure/active-directory-b2c/partner-f5?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
       - name: Silverfort
         href: silverfort-integration.md
     - name: Single sign-on
@@ -288,11 +288,11 @@ items:
   - name: Reference
     items:
     - name: Application API - Microsoft Graph
-      href: /graph/api/resources/application?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+      href: /graph/api/resources/application?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
     - name: Service principals API - Microsoft Graph
-      href: /graph/api/resources/serviceprincipal?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+      href: /graph/api/resources/serviceprincipal?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
     - name: Manage apps using Microsoft Graph
-      href: /graph/tutorial-applications-basics?toc=/entra/identity/enterprise-apps/toc.json&bc=/entra/identity/enterprise-apps/breadcrumb/toc.json&context=/entra/identity/enterprise-apps/context/manage-apps-context.json
+      href: /graph/tutorial-applications-basics?context=/entra/identity/enterprise-apps/context/manage-apps-context.json
     - name: Deletion and recovery FAQ
       href: delete-recover-faq.yml
     - name: Admin consent workflow FAQ
