--- a/docs/identity/users/breadcrumb/toc.yml
+++ b/docs/identity/users/breadcrumb/toc.yml
@@ -10,3 +10,12 @@ items:
     - name: Users
       tocHref: /graph/
       topicHref: /entra/identity/users/
+    - name: Users
+      tocHref: /entra/fundamentals/
+      topicHref: /entra/identity/users/
+    - name: Users
+      tocHref: /entra/external-id/
+      topicHref: /entra/identity/users/
+    - name: Users
+      tocHref: /entra/identity/hybrid/
+      topicHref: /entra/identity/users/
