--- a/docs/architecture/toc.yml
+++ b/docs/architecture/toc.yml
@@ -180,7 +180,7 @@ items:
   - name: Security
     items: 
     - name: Security baseline
-      href: /security/benchmark/azure/baselines/aad-security-baseline?toc=/entra/architecture/toc.json&bc=/entra/architecture/breadcrumb.toc.json&context=/entra/architecture/context/architecture-context.json
+      href: /security/benchmark/azure/baselines/aad-security-baseline?context=/entra/architecture/context/architecture-context.json
     - name: Security operations guide
       items: 
       - name: Security operations overview
