--- a/docs/fundamentals/toc.yml
+++ b/docs/fundamentals/toc.yml
@@ -64,7 +64,7 @@ items:
     - name: Group-based licensing
       href: ./concept-group-based-licensing.md
     - name: Microsoft Entra ID preview program
-      href: licensing-preview-terms.md
+      href: licensing-preview-info.md
     - name: Microsoft Entra ID licensing
       href: licensing.md
     - name: Sign up for Microsoft Entra ID P1 or P2
