--- a/docs/external-id/customers/toc.yml
+++ b/docs/external-id/customers/toc.yml
@@ -112,6 +112,18 @@ items:
                     href: tutorial-single-page-app-react-sign-in-configure-authentication.md 
                   - name: Sign in and sign out
                     href: tutorial-single-page-app-react-sign-in-sign-out.md
+          - name: Angular
+            items:
+              - name: Sign in users
+                items:
+                  - name: Prepare tenant
+                    href: tutorial-single-page-app-angular-sign-in-prepare-tenant.md
+                  - name: Prepare app
+                    href: tutorial-single-page-app-angular-sign-in-prepare-app.md
+                  - name: Configure app for authentication
+                    href: tutorial-single-page-app-angular-sign-in-configure-authentication.md 
+                  - name: Sign in and sign out
+                    href: tutorial-single-page-app-angular-sign-in-sign-out.md
       - name: Web app
         items: 
           - name: Node/Express.js
