--- a/docs/identity/multi-tenant-organizations/index.yml
+++ b/docs/identity/multi-tenant-organizations/index.yml
@@ -1,11 +1,11 @@
 ### YamlMime:Landing
 
-title: Multi-tenant organizations documentation
-summary: A multi-tenant organization is an organization that has more than one instance of Microsoft Entra ID. Describes ways that users can have a seamless experience accessing resources and collaborating across multiple tenants.
+title: Multitenant organizations documentation
+summary: A multitenant organization is an organization that has more than one instance of Microsoft Entra ID. Describes ways that users can have a seamless experience accessing resources and collaborating across multiple tenants.
 
 metadata:
-  title: Multi-tenant organizations documentation
-  description: Learn about multi-tenant organizations.
+  title: Multitenant organizations documentation
+  description: Learn about multitenant organizations.
   services: active-directory
   ms.service: active-directory
   ms.subservice: multi-tenant-organizations
@@ -20,13 +20,13 @@ metadata:
 
 landingContent:
   # Card
-  - title: About multi-tenant organizations
+  - title: About multitenant organizations
     linkLists:
       - linkListType: overview
         links:
-          - text: Multi-tenant organization scenario
+          - text: Multitenant organization scenario
             url: overview.md
-          - text: What is a multi-tenant organization?
+          - text: What is a multitenant organization?
             url: multi-tenant-organization-overview.md
           - text: What is cross-tenant synchronization?
             url: cross-tenant-synchronization-overview.md
@@ -36,7 +36,7 @@ landingContent:
     linkLists:
       - linkListType: concept
         links:
-          - text: Compare multi-tenant capabilities
+          - text: Compare multitenant capabilities
             url: overview.md#compare-multi-tenant-capabilities
           - text: Topologies for cross-tenant synchronization
             url: cross-tenant-synchronization-topology.md
@@ -46,21 +46,21 @@ landingContent:
     linkLists:
       - linkListType: concept
         links:
-          - text: Multi-tenant organizations and Microsoft 365
+          - text: Multitenant organizations and Microsoft 365
             url: multi-tenant-organization-microsoft-365.md
-          - text: Plan for multi-tenant organizations in Microsoft 365
+          - text: Plan for multitenant organizations in Microsoft 365
             url: /microsoft-365/enterprise/plan-multi-tenant-org-overview
-          - text: Microsoft 365 multi-tenant organization people search
+          - text: Microsoft 365 multitenant organization people search
             url: /microsoft-365/enterprise/multi-tenant-people-search
 
   # Card
-  - title: Configure a multi-tenant organization
+  - title: Configure a multitenant organization
     linkLists:
       - linkListType: how-to-guide
         links:
-          - text: Set up a multi-tenant org in Microsoft 365
+          - text: Set up a multitenant org in Microsoft 365
             url: /microsoft-365/enterprise/set-up-multi-tenant-org
-          - text: Join or leave a multi-tenant organization in Microsoft 365
+          - text: Join or leave a multitenant organization in Microsoft 365
             url: /microsoft-365/enterprise/join-leave-multi-tenant-org
           - text: Microsoft Graph API
             url: multi-tenant-organization-configure-graph.md
@@ -76,5 +76,5 @@ landingContent:
             url: cross-tenant-synchronization-configure-graph.md
           - text: Scoping users or groups to be provisioned
             url: ~/identity/app-provisioning/define-conditional-rules-for-provisioning-user-accounts.md?toc=/azure/active-directory/multi-tenant-organizations/toc.json&pivots=cross-tenant-synchronization
-          - text: Synchronize users in multi-tenant organizations in Microsoft 365
+          - text: Synchronize users in multitenant organizations in Microsoft 365
             url: /microsoft-365/enterprise/sync-users-multi-tenant-orgs
