--- a/docs/id-governance/TOC.yml
+++ b/docs/id-governance/TOC.yml
@@ -271,7 +271,7 @@
   items:
   - name: Identity Governance Dashboard
     href: governance-dashboard.md
-  - name: Identity Governance Service Limits
+  - name: Identity Governance service limits
     href: governance-service-limits.md  
   - name: Licensing fundamentals
     href: licensing-fundamentals.md
