--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -520,7 +520,7 @@
                   href: custom-extension-troubleshoot.md
         - name: Handle browser cookie restrictions
           items:
-            - name: Handle ITP in Safari
+            - name: How to handle third-party cookie blocking in browsers
               href: reference-third-party-cookies-spas.md
             - name: Handle SameSite cookie changes in Chrome
               href: howto-handle-samesite-cookie-changes-chrome-browser.md
