New article on updating an app's requested permissions

--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -488,6 +488,8 @@
           items:
             - name: Restrict your app to a set of users
               href: howto-restrict-your-app-to-a-set-of-users.md
+            - name: Update your app's requested permissions
+              href: howto-update-app-permissions.md
             - name: Add app roles in your application
               href: howto-add-app-roles-in-apps.md
             - name: Implement RBAC in your application
