--- a/docs/zone-pivot-groups.yml
+++ b/docs/zone-pivot-groups.yml
@@ -123,6 +123,15 @@ groups:
     title: Microsoft Graph PowerShell
   - id: ms-graph
     title: Microsoft Graph API
+## template with Graph API and portal
+- id: enterprise-apps-with-ms-graph
+  title: Manage Enterprise apps
+  prompt: Choose an option
+  pivots:
+  - id: portal
+    title: Azure portal
+  - id: ms-graph
+    title: Microsoft Graph API
 ## Create service principal with appId
 - id: enterprise-apps-cli
   title: Enterprise apps
