--- a/docs/permissions-management/TOC.yml
+++ b/docs/permissions-management/TOC.yml
@@ -34,6 +34,8 @@
         href: how-to-configure-aws-iam.md
       - name: Configure Okta as an identity provider
         href: how-to-configure-okta-as-an-identity-provider.md 
+      - name: Permissions Management for Defender for Cloud
+        href: permissions-management-for-defender-for-cloud.md
     - name: View information about your Authorization Systems
       expanded: false
       items:
