--- a/docs/external-id/customers/toc.yml
+++ b/docs/external-id/customers/toc.yml
@@ -316,6 +316,8 @@ items:
           href: how-to-manage-admin-accounts.md
         - name: Manage customer accounts
           href: how-to-manage-customer-accounts.md
+        - name: User activity insights
+          href: how-to-user-insights.md
     - name: Troubleshoot
       items:
         - name: Known issues
