--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1787,6 +1787,8 @@
         href: netmotion-mobility-tutorial.md
       - name: Netop Portal
         href: netop-portal-tutorial.md
+      - name: NetSfere
+        href: netsfere-tutorial.md
       - name: Netskope Cloud Security
         href: netskope-cloud-security-tutorial.md
       - name: Netskope Cloud Exchange Administration Console
