Product Backlog Item 2744184: SaaS App Tutorial: Collector Systems

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -584,6 +584,8 @@
         href: colab-tutorial.md
       - name: Collaborative Innovation
         href: collaborativeinnovation-tutorial.md
+      - name: Collector Systems
+        href: collector-systems-tutorial.md
       - name: Colloquial
         href: colloquial-tutorial.md
       - name: ColorTokens ZTNA
