--- a/docs/identity/devices/TOC.yml
+++ b/docs/identity/devices/TOC.yml
@@ -9,6 +9,10 @@
   items:
   - name: Microsoft Entra join a new Windows device
     href: device-join-out-of-box.md
+  - name: Microsoft Entra join a new Mac device
+    href: device-join-macos-pssoe-out-of-box.md
+  - name: Microsoft Entra register a Mac device
+    href: device-registration-macos-pssoe.md
 - name: Concepts
   expanded: true
   items:
@@ -91,6 +95,8 @@
       href: enterprise-state-roaming-windows-settings-reference.md
   - name: Troubleshoot SSO on Apple devices
     href: troubleshoot-mac-sso-extension-plugin.md
+  - name: Troubleshoot macOS PSSO on Mac
+    href: troubleshoot-macos-psso-extension.md
 - name: Reference
   items:
   - name: Microsoft Entra hybrid join reference
